2 - aktualizacja ShareYourCar
